@@ -1,6 +1,9 @@
 Release 1.0.6 (in development)
 ==============================
 
+* #565: In the LaTeX builder, not only literal blocks require different
+  table handling, but also quite a few other list-like block elements.
+
 * #515: Fix tracebacks in the viewcode extension for Python objects
   that do not have a valid signature.
 
